objects/ssot__LoyaltyPartnerProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Partner Product Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramPartnerId__c</fullName>
        <label>Loyalty Program Partner</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761155015_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BundleProduct_Id_map_LoyaltyPartnerP_rel</label>
        <referenceTo>ssot__BundleProduct__dlm</referenceTo>
        <relationshipLabel>BundleProduct_Id_map_LoyaltyPartnerP_rel</relationshipLabel>
        <relationshipName>rel_1697761155015_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761174650_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GoodsProduct_Id_map_LoyaltyPartnerPr_rel</label>
        <referenceTo>ssot__GoodsProduct__dlm</referenceTo>
        <relationshipLabel>GoodsProduct_Id_map_LoyaltyPartnerPr_rel</relationshipLabel>
        <relationshipName>rel_1697761174650_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761181721_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyPartnerProduct_LoyaltyProgram_rel</label>
        <referenceTo>ssot__LoyaltyProgramPartner__dlm</referenceTo>
        <relationshipLabel>LoyaltyPartnerProduct_LoyaltyProgram_rel</relationshipLabel>
        <relationshipName>rel_1697761181721_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>